public static class BBK // blackboard key
{
    public const string Enemy = "Enemy";
    public const string isHitt = "isHitt";
    public const string isDead = "isDead";
    public const string isStunned = "isStunned";
    public const string StuckAtWall = "StuckAtWall";
    public const string StuckAtCliff = "StuckAtCliff";
    public const string AttackState = "AttackState";
}